--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="container mx-auto">
-    <h1>Hola</h1>
-    <div class="grid grid-cols-4 gap-4">
+    <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4">
         <div class="max-w-sm rounded overflow-hidden shadow-lg">
             <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
@@ -15,6 +14,7 @@
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
             </div>
           </div>
+
           <div class="max-w-sm rounded overflow-hidden shadow-lg">
             <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
@@ -29,6 +29,9 @@
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
             </div>
           </div>
+
+
+
           <div class="max-w-sm rounded overflow-hidden shadow-lg">
             <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
@@ -43,6 +46,9 @@
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
             </div>
           </div>
+
+
+
           <div class="max-w-sm rounded overflow-hidden shadow-lg">
             <img class="w-full" src="/img/card-top.jpg" alt="Sunset in the mountains">
             <div class="px-6 py-4">
@@ -57,5 +63,8 @@
               <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#winter</span>
             </div>
           </div>
+
+
+
       </div>
 </div>
